# arifos-geox

./: .dockerignore  .gitignore  .gitleaks.toml  .gitmodules  .opencode.json  000_A-RIF.md  999_SEAL.md  AUDIT_2026-04-03_EXTERNAL.md  CHANGELOG.md  CLAUDE.md  CLOSED_LOOP_SYSTEM.md  COMPOSE.yml  DEPLOY.md  DEPLOYMENT_STATUS.md  Dockerfile  HORIZON_DEPLOYMENT.md  INTEGRATIONS.md  LICENSE  LICENSING.md  Makefile  POSITIONING.md  README.md  REPO_ATLAS.md  RESPONSE_TO_AUDIT.md  ROADMAP.md  SEAL_STATUS.md  SECRETS.yml  STDIO_GUIDE.md  TODO.md  UNIFIED_ROADMAP.md  arifos.yml  catalog.json  deploy-vps.sh  docker-compose.trinity.yml  docker-compose.yml  entrypoint.sh  fastmcp.json  geox_mcp_server.py  geox_mcp_server_acp.py  geox_rest_bridge.py  (+11 more)
.arifos/: adam_agent.py  apex_judge.py  arif_agent.py  autoresearch.py  metrics.py  vault_seal.py
.claude/: mcp.json  settings.local.json
.cursor/: mcp.json
.gemini/: settings.json
.github/: copilot-instructions.md
000/: 000_CONSTITUTION.md  000_INFRA_SOVEREIGNTY.md
333/: 333_APEX_CANON.md  333_INIT.md
AAA-hf-staging/: README.md
AGENTS/: A-AUDITOR.md  A-ORCHESTRATOR.md  AGENTS.md  README.md  SKILL.md  control-plane-diagram.mmd  example-usage.py  execution-controller.py  skills.yaml  universal-agent-baseline.yaml
ARCH/: MAPPING.md  VERDICTS.md
DATA/: philosophy_atlas.json
DEPLOY/: README.md  fastmcp.json
INFRA/: dynamic-hardened.yml  dynamic.yml  traefik.yml
WELL/: .gitignore  CHARTER.md  state.json  test_well.py  vault_bridge.py
WORKFLOWS/: forge_aaa.md
aaa_mcp/: README.md  __init__.py  arif_agent.py  tools.py
agents/: A-ENGINEER.md
arifOS-model-registry/: .gitignore  SOUL_SCHEMA_SPEC.md  catalog.json  soul_deploy.py  soul_merger.py
arifos_mcp/: 999_SEAL.md  README.md
arifosmcp/: openai_bridge.py
autoresearch/: .gitignore  ARIFOS_AUTORESEARCH_GUIDE.md  INTEGRATION_STATUS.md  arifos_optimizer.py  prepare.py  (+4 more)
geox/: .gitignore  Dockerfile  README.md  docker-compose.yml  forge.yaml  geox_mcp_server.py  geox_report_handler.py  pyproject.toml  smithery.yaml
geox/adapters/: wealth_bridge.py
geox/arifos/geox/: __init__.py  geox_agent.py  geox_hardened.py  geox_mcp_server.py  geox_schemas.py  geox_validator.py
geox/arifos/geox/examples/: geox_malay_basin_demo.py
geox/arifos/geox/examples/mock_tools/: mock_earthnet.py  mock_vlm.py
geox/arifos/geox/governance/: indices.py
geox/arifos/geox/tools/: macrostrat_tool.py
geox/arifos/geox/utils/: __init__.py  time_utils.py  units.py
geox/core/: ac_risk.py  physics_guard.py
geox/geox_mcp/: fastmcp_server.py  server.py
geox/geox_mcp/tools/: __init__.py  asset_memory_tool.py  basin_charge_tool.py  las_ingest_tool.py  open_energy_tool.py  petro_ensemble_tool.py  sensitivity_tool.py  spglobal_tool.py  visualization.py  volumetrics_tool.py
geox/ingest/: las_reader.py
geox/services/: eia_client.py  las_ingestor.py  npd_client.py  spglobal_client.py
geox/skills/subsurface/maps/: visualization.py
geox/skills/subsurface/petro/: gr_intervals.py
geox/tests/: test_end_to_end_mock.py  test_schemas.py
(+760 files in other folders)
